--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,9 +48,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-		
-       <activity android:name="org.achartengine.GraphicalActivity"/>
-        
+        <activity android:name="org.achartengine.GraphicalActivity" />
         <activity
             android:name=".GraphingActivity"
             android:label="@string/title_activity_patient" >
@@ -60,10 +58,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-         
         <activity
             android:name=".PatientsListGraphActivity"
             android:label="@string/title_activity_patients_list_graph" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".PostLoginActivity"
+            android:label="@string/title_activity_post_login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
